ontopia/src/test-data/xtm2/invalid/id-invalid.xtm
<topicMap xmlns="http://www.topicmaps.org/xtm/" version="2.0">
  <topic id="2topic">
  </topic>
</topicMap>
